--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -63,19 +63,21 @@
 
     </div>
 
+
     <div class="col-xs-12 col-sm-6 col-md-6">
-        <span class="sort-inline review-inner-header">Reviews (Most recent 5)</span>
-        <hr class="hr-dark-grey" />
+      <span class="sort-inline review-inner-header">Reviews (Most recent 5)</span>
+      <hr class="hr-dark-grey" />
 
-        {% for reviews in Product %}
 
-        <div>
-            <p>{{ review.rating }} <i class="fa fa-star star-color" aria-hidden="true"></i> - {{ review.user_name | upper }}</p>
-            <p>{{ review.comment }} </p>
-            <hr/>
-        </div>
+      {% for review in reviews %}
 
-        {% endfor %}
+      <div>
+        <p>{{ review.rating }} <i class="fa fa-star star-color" aria-hidden="true"></i> - {{ review.user_name | upper }}</p>
+        <p>{{ review.comment }} </p>
+        <hr />
+      </div>
+
+      {% endfor %}
 
     </div>
     <hr>
