--- a/products/templates/productdetail.html
+++ b/products/templates/productdetail.html
@@ -55,7 +55,7 @@
       </div>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6">
-      <span class="sort-inline review-inner-header">Reviews (Most recent 5)</span>
+      <span class="sort-inline review-inner-header">Reviews</span>
       <hr class="hr-dark-grey" />
       {% for review in reviews %}
       <div>
